[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Screens/Play Screens/Play Finish Manager.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI Elements/Buttons/back.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI Elements/Buttons/tweet.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 380.492
margin_top = 19.1632
margin_right = 594.492
margin_bottom = 111.163
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 344.815
margin_top = 103.597
margin_right = 558.815
margin_bottom = 195.597
custom_fonts/font = SubResource( 1 )
text = "Score: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingLabel" type="Label" parent="."]
margin_left = 344.815
margin_top = 235.889
margin_right = 558.815
margin_bottom = 327.889
custom_fonts/font = SubResource( 1 )
text = "Waiting to submit..."
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BackButton" type="TextureButton" parent="."]
visible = false
margin_left = 42.8373
margin_top = 46.6171
margin_right = 122.837
margin_bottom = 126.617
texture_normal = ExtResource( 3 )
expand = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ShareButton" type="TextureButton" parent="."]
visible = false
margin_left = 407.0
margin_top = 390.0
margin_right = 472.0
margin_bottom = 455.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ShareButton" to="." method="_on_ShareButton_pressed"]
